--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -22,6 +22,15 @@ POST                                                        CLICKS  IMPRESSIONS
 ## YOUTUBE
 * () update youtube github video links from threejs-examples-house forward
 
+## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
+
+## () - WEEK 5 - SUN 10/23/2022 to SAT 10/29/2022
+<!-- threejs-curve-quadratic-bezier-curve3 -->
+* () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
+* () edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
+<!-- threejs-examples-sequence-hooks -->
+* () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
+* () edit: threejs-examples-sequence-hooks - write about new curve examples
 
 ## () - WEEK 4 - SUN 10/16/2022 to SAT 10/22/2022
 TOPTEN: This week the top 10 post to look at is the one on the object3d look at method.
@@ -30,10 +39,9 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - SAT 10/22/2022
 * (done) forpost: threejs-plane - new example for the attributes section
 * (done) edit: threejs-plane - write about new attributes example
+* (done) forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 <!-- threejs-curve-quadratic-bezier-curve3 -->
-* () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
-* () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
-* () edit: threejs-curve-quadratic-bezier-curve3 - write about new examples
+* () edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
