--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,6 +42,8 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 <!-- threejs-curve-quadratic-bezier-curve3 -->
 * () edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
