--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -40,8 +40,10 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) forpost: threejs-plane - new example for the attributes section
 * (done) edit: threejs-plane - write about new attributes example
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
 <!-- threejs-curve-quadratic-bezier-curve3 -->
-* () edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
+* () forpost: threejs-curve-quadratic-bezier-curve3 - new loop exampl on the get point method
+* () edit: threejs-curve-quadratic-bezier-curve3 - write about new loop exmple on the get point method
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
 <!-- misc -->
