--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,7 +44,9 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - new loop exampl on the get point method
 * (done edit: threejs-curve-quadratic-bezier-curve3 - write about new loop exmple on the get point method
 <!-- videoground-blog-posts -->
-* () videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
+* (done) videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
+* () videoground-blog-posts: final video from done with audio
+* () videoground-blog-posts: edit post with embed to video
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
