--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,10 +43,13 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - new loop exampl on the get point method
 * (done edit: threejs-curve-quadratic-bezier-curve3 - write about new loop exmple on the get point method
-<!-- videoground-blog-posts -->
 * (done) videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
-* () videoground-blog-posts: final video from done with audio
-* () videoground-blog-posts: edit post with embed to video
+* (done) videoground-blog-posts: final video from done with audio
+* (done) videoground-blog-posts: edit post with embed to video
+<!-- threejs-examples-sphere-mutate -->
+* (done) forpost: threejs-examples-sphere-mutate - start r2 of sphere mutate
+* () forpost: threejs-examples-sphere-mutate - get general idea of r2 working
+
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
