--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -25,12 +25,41 @@ POST                                                        CLICKS  IMPRESSIONS
 ## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
 
 ## () - WEEK 5 - SUN 10/23/2022 to SAT 10/29/2022
+
+Just want to catch up with things this week.
+
+### () - SAT 10/29/2022
+
+### () - FRI 10/28/2022
+* () start post #1011 on threejs-
+
+### () - THU 10/27/2022
+
+### () - WED 10/26/2022
+
+### () - TUE 10/25/2022
+
+### () - MON 10/24/2022
+<!-- threejs-object3d-traverse -->
+* () edit: threejs-object3d-traverse - proof read opening
+* () forpost: 
+* () edit:
+
+### () - SUN 10/23/2022
 <!-- threejs-curve-quadratic-bezier-curve3 -->
 * () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
 * () edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
+<!-- threejs-examples-sphere-mutate -->
+* (done) forpost: threejs-examples-sphere-mutate - start r2 of sphere mutate
+* () forpost: threejs-examples-sphere-mutate - get general idea of r2 working
+<!-- misc -->
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
 
 ## () - WEEK 4 - SUN 10/16/2022 to SAT 10/22/2022
 TOPTEN: This week the top 10 post to look at is the one on the object3d look at method.
@@ -46,15 +75,6 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
 * (done) videoground-blog-posts: final video from done with audio
 * (done) videoground-blog-posts: edit post with embed to video
-<!-- threejs-examples-sphere-mutate -->
-* (done) forpost: threejs-examples-sphere-mutate - start r2 of sphere mutate
-* () forpost: threejs-examples-sphere-mutate - get general idea of r2 working
-
-<!-- misc -->
-* () hexo-sitesource: at least have a new static background
-* () build and publish
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
 
 ### () - FRI 10/21/2022
 * (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
