--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,8 +47,8 @@ Just want to catch up with things this week.
 
 ### () - SUN 10/23/2022
 <!-- threejs-curve-quadratic-bezier-curve3 -->
-* () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
-* () edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
+* (done) forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
