--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,22 +44,29 @@ Just want to catch up with things this week.
 * () edit: threejs-object3d-traverse - proof read opening
 * () forpost: 
 * () edit:
-
-### () - SUN 10/23/2022
-<!-- threejs-curve-quadratic-bezier-curve3 -->
-* (done) forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
-* (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
+<!-- threejs-examples-sphere-mutate -->
+* () forpost: new r2 demo
+* () edit: write aboit new r2 of example thus far
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
-<!-- threejs-examples-sphere-mutate -->
-* (done) forpost: threejs-examples-sphere-mutate - start r2 of sphere mutate
-* () forpost: threejs-examples-sphere-mutate - get general idea of r2 working
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 * () videoground: get at least something done with r6
+
+### () - SUN 10/23/2022
+<!-- threejs-curve-quadratic-bezier-curve3 -->
+* (done) forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new basic example
+* (done) forpost: threejs-examples-sphere-mutate - start r2 of sphere mutate
+* (done) forpost: threejs-examples-sphere-mutate - get general idea of r2 working
+
+
+
+
+
 
 ## () - WEEK 4 - SUN 10/16/2022 to SAT 10/22/2022
 TOPTEN: This week the top 10 post to look at is the one on the object3d look at method.
