--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -38,15 +38,16 @@ Just want to catch up with things this week.
 ### () - WED 10/26/2022
 
 ### () - TUE 10/25/2022
+<!-- threejs-object3d-traverse -->
+* () forpost: threejs-object3d-traverse - new example
+* () edit: threejs-object3d-traverse - write about new example
 
 ### () - MON 10/24/2022
-<!-- threejs-object3d-traverse -->
-* () edit: threejs-object3d-traverse - proof read opening
-* () forpost: 
-* () edit:
 <!-- threejs-examples-sphere-mutate -->
 * () forpost: new r2 demo
 * () edit: write aboit new r2 of example thus far
+<!-- threejs-object3d-traverse -->
+* () edit: threejs-object3d-traverse - proof read opening
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
