--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,8 +44,9 @@ Just want to catch up with things this week.
 
 ### () - MON 10/24/2022
 <!-- threejs-examples-sphere-mutate -->
-* () forpost: new r2 demo
-* () edit: write aboit new r2 of example thus far
+* () edit: threejs-examples-sphere-mutate - start r2 section
+* () forpost: threejs-examples-sphere-mutate - new r2 demo
+* () edit: threejs-examples-sphere-mutate - write about new r2 example
 <!-- threejs-object3d-traverse -->
 * () edit: threejs-object3d-traverse - proof read opening
 <!-- threejs-examples-sequence-hooks -->
