--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -45,7 +45,7 @@ Just want to catch up with things this week.
 ### () - MON 10/24/2022
 * (done) edit: threejs-examples-sphere-mutate - start r2 section
 * (done) forpost: threejs-examples-sphere-mutate - new r2 demo
-* () edit: threejs-examples-sphere-mutate - write about new r2 example
+* (done) edit: threejs-examples-sphere-mutate - write about new r2 example
 <!-- threejs-object3d-traverse -->
 * () edit: threejs-object3d-traverse - proof read opening
 <!-- threejs-examples-sequence-hooks -->
