--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -41,16 +41,15 @@ Just want to catch up with things this week.
 <!-- threejs-object3d-traverse -->
 * () forpost: threejs-object3d-traverse - new example
 * () edit: threejs-object3d-traverse - write about new example
+<!-- threejs-examples-sequence-hooks -->
+* () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
+* () edit: threejs-examples-sequence-hooks - write about new curve examples
 
 ### () - MON 10/24/2022
 * (done) edit: threejs-examples-sphere-mutate - start r2 section
 * (done) forpost: threejs-examples-sphere-mutate - new r2 demo
 * (done) edit: threejs-examples-sphere-mutate - write about new r2 example
-<!-- threejs-object3d-traverse -->
-* () edit: threejs-object3d-traverse - proof read opening
-<!-- threejs-examples-sequence-hooks -->
-* () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
-* () edit: threejs-examples-sequence-hooks - write about new curve examples
+* (done) edit: threejs-object3d-traverse - proof read opening
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
