--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -22,8 +22,20 @@ POST                                                        CLICKS  IMPRESSIONS
 ## YOUTUBE
 * () update youtube github video links from threejs-examples-house forward
 
+
+
+
+
+
 ## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
 
+
+
+
+
+<!-------- ----------
+-- WEEK 5
+---------- --------->
 ## () - WEEK 5 - SUN 10/23/2022 to SAT 10/29/2022
 
 Just want to catch up with things this week.
@@ -44,17 +56,17 @@ Just want to catch up with things this week.
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
+<!-- misc -->
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
 
 ### () - MON 10/24/2022
 * (done) edit: threejs-examples-sphere-mutate - start r2 section
 * (done) forpost: threejs-examples-sphere-mutate - new r2 demo
 * (done) edit: threejs-examples-sphere-mutate - write about new r2 example
 * (done) edit: threejs-object3d-traverse - proof read opening
-<!-- misc -->
-* () hexo-sitesource: at least have a new static background
-* () build and publish
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
 
 ### () - SUN 10/23/2022
 <!-- threejs-curve-quadratic-bezier-curve3 -->
@@ -67,7 +79,9 @@ Just want to catch up with things this week.
 
 
 
-
+<!-------- ----------
+-- WEEK 4
+---------- --------->
 ## () - WEEK 4 - SUN 10/16/2022 to SAT 10/22/2022
 TOPTEN: This week the top 10 post to look at is the one on the object3d look at method.
 NEWPOST: This week I would like to work on an idea for making a system for creating VEctor3 data to use with an improved seqhooks mod
@@ -78,7 +92,7 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 * (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new loop examples
 * (done) forpost: threejs-curve-quadratic-bezier-curve3 - new loop exampl on the get point method
-* (done edit: threejs-curve-quadratic-bezier-curve3 - write about new loop exmple on the get point method
+* (done) edit: threejs-curve-quadratic-bezier-curve3 - write about new loop exmple on the get point method
 * (done) videoground-blog-posts: video 1 for threejs-curve-quadratic-bezier-curve3
 * (done) videoground-blog-posts: final video from done with audio
 * (done) videoground-blog-posts: edit post with embed to video
