--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -51,6 +51,8 @@ Just want to catch up with things this week.
 
 ### () - TUE 10/25/2022
 <!-- threejs-object3d-traverse -->
+* (done) forpost: threejs-object3d-traverse - clean up basic example
+* () edit: threejs-object3d-traverse - basic example section
 * () forpost: threejs-object3d-traverse - new example
 * () edit: threejs-object3d-traverse - write about new example
 <!-- threejs-examples-sequence-hooks -->
