--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,21 +48,20 @@ Just want to catch up with things this week.
 ### () - THU 10/27/2022
 
 ### () - WED 10/26/2022
+<!-- threejs-object3d-traverse -->
 
 ### () - TUE 10/25/2022
-<!-- threejs-object3d-traverse -->
 * (done) forpost: threejs-object3d-traverse - clean up basic example
-* () edit: threejs-object3d-traverse - basic example section
-* () forpost: threejs-object3d-traverse - new example
-* () edit: threejs-object3d-traverse - write about new example
+* (done) edit: threejs-object3d-traverse - basic example section
+* (done) forpost: threejs-object3d-traverse - new example
+* (done) edit: threejs-object3d-traverse - write about new example
 <!-- threejs-examples-sequence-hooks -->
 * () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
 * () edit: threejs-examples-sequence-hooks - write about new curve examples
 <!-- misc -->
-* () hexo-sitesource: at least have a new static background
 * () build and publish
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
+<!-- prototypes -->
+* () start prototype for creating paths by clicking canvas
 
 ### () - MON 10/24/2022
 * (done) edit: threejs-examples-sphere-mutate - start r2 section
