--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,20 +48,19 @@ Just want to catch up with things this week.
 ### () - THU 10/27/2022
 
 ### () - WED 10/26/2022
-<!-- threejs-object3d-traverse -->
+<!-- proto-curve-paths-tool -->
+* () I will want to work out raycasting
+<!-- misc -->
+* () build and publish
 
 ### () - TUE 10/25/2022
 * (done) forpost: threejs-object3d-traverse - clean up basic example
 * (done) edit: threejs-object3d-traverse - basic example section
 * (done) forpost: threejs-object3d-traverse - new example
 * (done) edit: threejs-object3d-traverse - write about new example
-<!-- threejs-examples-sequence-hooks -->
-* () forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
-* () edit: threejs-examples-sequence-hooks - write about new curve examples
-<!-- misc -->
-* () build and publish
-<!-- prototypes -->
-* () start prototype for creating paths by clicking canvas
+* (done) forpost: threejs-examples-sequence-hooks - new r2 demos based on what I worked out for bezier curve post
+* (done) edit: threejs-examples-sequence-hooks - write about new curve examples
+* (done) start prototype for creating paths by clicking canvas
 
 ### () - MON 10/24/2022
 * (done) edit: threejs-examples-sphere-mutate - start r2 section
