--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,7 +49,7 @@ Just want to catch up with things this week.
 
 ### () - WED 10/26/2022
 <!-- proto-curve-paths-tool -->
-* () I will want to work out raycasting
+* () update points with new curve
 <!-- misc -->
 * () build and publish
 
