--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,13 +43,19 @@ Just want to catch up with things this week.
 ### () - SAT 10/29/2022
 
 ### () - FRI 10/28/2022
-* () start post #1011 on threejs-
+* () start post #1011 on threejs-examples-create-path-tool
 
 ### () - THU 10/27/2022
+<!-- proto-curve-paths-tool -->
+* () work on the prototype a little start start r0 for the for post folder
 
 ### () - WED 10/26/2022
-<!-- proto-curve-paths-tool -->
-* () update points with new curve
+* (done) update points with new curve
+<!-- threejs-object3d-traverse -->
+* () forpost: threejs-object3d-traverse - see about new example
+* () edit: threejs-object3d-traverse - write about new example
+<!-- videoground-blog-posts -->
+
 <!-- misc -->
 * () build and publish
 
