--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,12 +48,15 @@ Just want to catch up with things this week.
 ### () - THU 10/27/2022
 <!-- proto-curve-paths-tool -->
 * () work on the prototype a little start start r0 for the for post folder
+<!-- threejs-object3d-traverse -->
+* () forpost: threejs-object3d-traverse - video2 loop example
+* () edit: threejs-object3d-traverse - write about new example
 
 ### () - WED 10/26/2022
 * (done) update points with new curve
 <!-- threejs-object3d-traverse -->
-* () forpost: threejs-object3d-traverse - see about new example
-* () edit: threejs-object3d-traverse - write about new example
+* (done) forpost: threejs-object3d-traverse - see about new example
+* (done) edit: threejs-object3d-traverse - write about new example
 <!-- videoground-blog-posts -->
 
 <!-- misc -->
