--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,23 +44,25 @@ Just want to catch up with things this week.
 
 ### () - FRI 10/28/2022
 * () start post #1011 on threejs-examples-create-path-tool
+<!-- misc -->
+* () build and publish
+
 
 ### () - THU 10/27/2022
-<!-- proto-curve-paths-tool -->
-* () work on the prototype a little start start r0 for the for post folder
+<!-- videoground-blog-posts -->
+* () started a video2 for threejs-examples-sequence-hooks r2 of the module
+* () edit: threejs-examples-sequence-hooks - new video
 <!-- threejs-object3d-traverse -->
 * () forpost: threejs-object3d-traverse - video2 loop example
 * () edit: threejs-object3d-traverse - write about new example
+<!-- proto-curve-paths-tool -->
+* () work on the prototype a little start start r0 for the for post folder
 
 ### () - WED 10/26/2022
 * (done) update points with new curve
-<!-- threejs-object3d-traverse -->
 * (done) forpost: threejs-object3d-traverse - see about new example
 * (done) edit: threejs-object3d-traverse - write about new example
-<!-- videoground-blog-posts -->
-
-<!-- misc -->
-* () build and publish
+* (done) started a video2 for threejs-examples-sequence-hooks r2 of the module
 
 ### () - TUE 10/25/2022
 * (done) forpost: threejs-object3d-traverse - clean up basic example
