--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,9 +49,15 @@ Just want to catch up with things this week.
 
 
 ### () - THU 10/27/2022
+<!-- videoground-beta-world -->
+* (done) javascript files are now all in sub folders
+* (done) fixed up old video folder projects thus far to work with new file locations
+* () start frink1 video folder
 <!-- videoground-blog-posts -->
 * () started a video2 for threejs-examples-sequence-hooks r2 of the module
 * () edit: threejs-examples-sequence-hooks - new video
+<!-- threejs-examples-sequence-hooks -->
+* () new r2 demo that is like what I worked out for video in terms of the helpers
 <!-- threejs-object3d-traverse -->
 * () forpost: threejs-object3d-traverse - video2 loop example
 * () edit: threejs-object3d-traverse - write about new example
