--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,10 +49,11 @@ Just want to catch up with things this week.
 
 
 ### () - THU 10/27/2022
-<!-- videoground-beta-world -->
 * (done) javascript files are now all in sub folders
 * (done) fixed up old video folder projects thus far to work with new file locations
-* () start frink1 video folder
+* (done) start frink1 video folder
+* (done) video1 done for frink1
+
 <!-- videoground-blog-posts -->
 * () started a video2 for threejs-examples-sequence-hooks r2 of the module
 * () edit: threejs-examples-sequence-hooks - new video
@@ -63,6 +64,9 @@ Just want to catch up with things this week.
 * () edit: threejs-object3d-traverse - write about new example
 <!-- proto-curve-paths-tool -->
 * () work on the prototype a little start start r0 for the for post folder
+<!-- videoground-beta-world -->
+* () video2 for frink1
+
 
 ### () - WED 10/26/2022
 * (done) update points with new curve
