--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,8 +49,8 @@ Just want to catch up with things this week.
 
 ### () - FRI 10/28/2022
 * (done) start post #1011 on threejs-examples-create-path-tool
-* () edit: threejs-examples - link to new threejs-examples-create-path-tool post
-* () edit: threejs-examples - expand section on sequence hooks
+* (done) edit: threejs-examples - link to new threejs-examples-create-path-tool post
+* (done) edit: threejs-examples - expand section on sequence hooks
 <!-- threejs-examples-sequence-hooks -->
 * () new r2 demo that is like what I worked out for video in terms of the helpers
 <!-- misc -->
