--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,10 +48,9 @@ Just want to catch up with things this week.
 * (done) start post #1011 on threejs-examples-create-path-tool
 * (done) edit: threejs-examples - link to new threejs-examples-create-path-tool post
 * (done) edit: threejs-examples - expand section on sequence hooks
+* (done) video2 for frink1
 <!-- misc -->
 * () build and publish
-<!-- videoground-beta-world -->
-* () video2 for frink1
 
 ### () - THU 10/27/2022
 * (done) javascript files are now all in sub folders
