--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -28,10 +28,15 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 ## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
-<!-- videoground-blog-posts -->
-* () started a video2 for threejs-examples-sequence-hooks r2 of the module
-* () edit: threejs-examples-sequence-hooks - new video
 
+
+### () - MON 10/31/2022
+* () 
+
+### () - SUN 10/30/2022
+* () test-threejs: start new proto folder for Glavin Points
+* () test-threejs: start new proto folder for cube-uvmap-sheet
+* () videoground-beta-world: work on frink4
 
 <!-------- ----------
 -- WEEK 5
@@ -41,16 +46,14 @@ POST                                                        CLICKS  IMPRESSIONS
 Just want to catch up with things this week.
 
 ### () - SAT 10/29/2022
-<!-- threejs-examples-sequence-hooks -->
-* () new r2 demo that is like what I worked out for video in terms of the helpers
+* (done) build and publish
+* (done) videoground-beta-world - frink3
 
 ### () - FRI 10/28/2022
 * (done) start post #1011 on threejs-examples-create-path-tool
 * (done) edit: threejs-examples - link to new threejs-examples-create-path-tool post
 * (done) edit: threejs-examples - expand section on sequence hooks
 * (done) video2 for frink1
-<!-- misc -->
-* () build and publish
 
 ### () - THU 10/27/2022
 * (done) javascript files are now all in sub folders
