--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -31,11 +31,13 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 ### () - MON 10/31/2022
-* () 
+<!-- test threejs -->
+* () test-threejs: new proto-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
 
 ### () - SUN 10/30/2022
+* (done) test-threejs: start new proto folder for proto-uvmap-cube-sheet
+<!-- test threejs -->
 * () test-threejs: start new proto folder for Glavin Points
-* () test-threejs: start new proto folder for cube-uvmap-sheet
 * () videoground-beta-world: work on frink4
 
 <!-------- ----------
