--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -37,7 +37,7 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - SUN 10/30/2022
 * (done) test-threejs: start new proto folder for proto-uvmap-cube-sheet
 <!-- test threejs -->
-* () test-threejs: start new proto folder for Glavin Points
+* () test-threejs: start new proto-glavin-points
 * () videoground-beta-world: work on frink4
 
 <!-------- ----------
