--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -26,19 +26,28 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 
-
+<!-------- ----------
+-- WEEK 6
+---------- --------->
 ## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
 
 
 ### () - MON 10/31/2022
 <!-- test threejs -->
+* () test-threejs: forpost - threejs-object3d-position - start curve section
 * () test-threejs: new proto-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
+
+<!-- EDIT -->
+* () edit: threejs-object3d-position - wrirte about new curve section
+* () edit: threejs-buffer-geometry-attributes-uv - proof read
+
+<!-- videoground-beta-world -->
+* () videoground-beta-world: new zucker video
+* () videoground-beta-world: work on frink4
 
 ### () - SUN 10/30/2022
 * (done) test-threejs: start new proto folder for proto-uvmap-cube-sheet
 * (done) test-threejs: start new proto-glavin-points
-<!-- videoground-beta-world -->
-* () videoground-beta-world: work on frink4
 
 <!-------- ----------
 -- WEEK 5
