--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -33,12 +33,13 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 ### () - MON 10/31/2022
+* (done) test-threejs: forpost - threejs-object3d-position - start curve section
+* (done) edit: threejs-object3d-position - wrirte about new curve section
+
 <!-- test threejs -->
-* () test-threejs: forpost - threejs-object3d-position - start curve section
 * () test-threejs: new proto-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
 
 <!-- EDIT -->
-* () edit: threejs-object3d-position - wrirte about new curve section
 * () edit: threejs-buffer-geometry-attributes-uv - proof read
 
 <!-- videoground-beta-world -->
