--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -31,16 +31,18 @@ POST                                                        CLICKS  IMPRESSIONS
 ---------- --------->
 ## () - WEEK 6 - SUN 10/30/2022 - MON 10/31/2022
 
+Just starting some prototypes and editing the current posts
 
 ### () - MON 10/31/2022
 * (done) test-threejs: forpost - threejs-object3d-position - start curve section
 * (done) edit: threejs-object3d-position - wrirte about new curve section
+* (done) edit: threejs-buffer-geometry-attributes-uv - proof read opening
 
 <!-- test threejs -->
 * () test-threejs: new proto-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
 
 <!-- EDIT -->
-* () edit: threejs-buffer-geometry-attributes-uv - proof read
+* () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 
 <!-- videoground-beta-world -->
 * () videoground-beta-world: new zucker video
