--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,14 +39,10 @@ Just starting some prototypes and editing the current posts
 * (done) edit: threejs-buffer-geometry-attributes-uv - proof read opening
 
 <!-- test threejs -->
-* () test-threejs: new proto-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
-
-<!-- EDIT -->
-* () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
 
 <!-- videoground-beta-world -->
-* () videoground-beta-world: new zucker video
-* () videoground-beta-world: work on frink4
+* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update
 
 ### () - SUN 10/30/2022
 * (done) test-threejs: start new proto folder for proto-uvmap-cube-sheet
