--- a/todo/today/2022/todo_2022_10.md
+++ b/todo/today/2022/todo_2022_10.md
@@ -37,12 +37,7 @@ Just starting some prototypes and editing the current posts
 * (done) test-threejs: forpost - threejs-object3d-position - start curve section
 * (done) edit: threejs-object3d-position - wrirte about new curve section
 * (done) edit: threejs-buffer-geometry-attributes-uv - proof read opening
-
-<!-- test threejs -->
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
-
-<!-- videoground-beta-world -->
-* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - ( fixed uv state, using canvas to update things )
 
 ### () - SUN 10/30/2022
 * (done) test-threejs: start new proto folder for proto-uvmap-cube-sheet
