--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -44,4 +44,9 @@ POST                                                        CLICKS  IMPRESSIONS
 ### () - TUE 11/01/2022
 <!-- EDIT -->
 * () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
+<!-- test threejs -->
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more r0 examples
+<!-- videoground-beta-world -->
+* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
+
 
