--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -42,10 +42,16 @@ POST                                                        CLICKS  IMPRESSIONS
 * () videoground-beta-world: work on frink4
 
 ### () - TUE 11/01/2022
+<!-- test_threejs -->
+* () test-threejs: forpost - threejs-texture-loader - update code examples
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
+
+
 <!-- EDIT -->
+* () edit: threejs-texture-loader - new code examples, proof read
 * () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
-<!-- test threejs -->
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more r0 examples
+
 <!-- videoground-beta-world -->
 * () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
 
