--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -49,7 +49,7 @@ POST                                                        CLICKS  IMPRESSIONS
 
 
 <!-- EDIT -->
-* () edit: threejs-texture-loader - proof read
+* (done) edit: threejs-texture-loader - proof read
 * () edit: threejs-texture-loader - new code examples
 * () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 
