--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,14 +43,19 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - TUE 11/01/2022
 <!-- test_threejs -->
-* () test-threejs: forpost - threejs-texture-loader - update code examples
+* (done) test-threejs: forpost - threejs-texture-loader - update code examples
+* (done) test-threejs: forpost - threejs-texture-loader - new basic example
+* () test-threejs: forpost - threejs-texture-loader - new load many example
+
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
 
 
 <!-- EDIT -->
 * (done) edit: threejs-texture-loader - proof read
-* () edit: threejs-texture-loader - new code examples
+* () edit: threejs-texture-loader - write about new basic example
+* () edit: threejs-texture-loader - write about new load many example
+
 * () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 
 <!-- videoground-beta-world -->
