--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -24,11 +24,20 @@ POST                                                        CLICKS  IMPRESSIONS
 ## YOUTUBE
 * () update youtube github video links from threejs-examples-house forward
 
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 3 - SUN 11/06/2022 - SAT 11/12/2022
+
+I might want to write a new post on the base loader class this week.
+
 
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
 ## () - WEEK 1 - TUE 11/01/2022 - SAT 11/05/2022
+
+The post to focus on a little each day is buffer-geometry-attributes-uv, new post is on a new example threejs-examples-uvmap-cube-canvas-update. So th focus this week is on the uv attribute, and things that end up branching off from that.
 
 ### () - SAT 11/05/2022
 
