--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -62,8 +62,8 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 
 <!-- EDIT -->
 * (done) edit: threejs-texture-loader - proof read
-* () edit: threejs-texture-loader - write about new basic example
-* () edit: threejs-texture-loader - write about new load many example
+* (done) edit: threejs-texture-loader - write about new basic example
+* (done) edit: threejs-texture-loader - write about new load many example
 
 * () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 
