--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -54,7 +54,10 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 <!-- test_threejs -->
 * (done) test-threejs: forpost - threejs-texture-loader - update code examples
 * (done) test-threejs: forpost - threejs-texture-loader - new basic example
-* () test-threejs: forpost - threejs-texture-loader - new load many example
+* (done) test-threejs: forpost - threejs-texture-loader - new load many example
+
+* () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - update old examples
+
 
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
@@ -64,8 +67,9 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) edit: threejs-texture-loader - proof read
 * (done) edit: threejs-texture-loader - write about new basic example
 * (done) edit: threejs-texture-loader - write about new load many example
+* (done) edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 
-* () edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
+* () edit: threejs-buffer-geometry-attributes-uv - update code exmaples in post
 
 <!-- videoground-beta-world -->
 * () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
