--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -47,29 +47,29 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 ### () - THU 11/03/2022
 
 ### () - WED 11/02/2022
+<!-- test_threejs -->
+* () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - new basic example
+* () edit: threejs-buffer-geometry-attributes-uv - write about new basic example
+
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () videoground-beta-world: work on frink4
 
 ### () - TUE 11/01/2022
-<!-- test_threejs -->
 * (done) test-threejs: forpost - threejs-texture-loader - update code examples
 * (done) test-threejs: forpost - threejs-texture-loader - new basic example
 * (done) test-threejs: forpost - threejs-texture-loader - new load many example
-
-* () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - update old examples
-
-
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
-
-
-<!-- EDIT -->
+* (done) test-threejs: forpost - threejs-buffer-geometry-attributes-uv - update old examples
 * (done) edit: threejs-texture-loader - proof read
 * (done) edit: threejs-texture-loader - write about new basic example
 * (done) edit: threejs-texture-loader - write about new load many example
 * (done) edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
+* (done) edit: threejs-buffer-geometry-attributes-uv - update code exmaples in post
 
-* () edit: threejs-buffer-geometry-attributes-uv - update code exmaples in post
+<!-- test_threejs -->
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
+
+<!-- EDIT -->
 
 <!-- videoground-beta-world -->
 * () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
