--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -64,10 +64,11 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) edit: threejs-texture-loader - write about new load many example
 * (done) edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 * (done) edit: threejs-buffer-geometry-attributes-uv - update code exmaples in post
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
 
 <!-- test_threejs -->
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - r0 texture loader example
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - start r0 texture loader example
+
 
 <!-- EDIT -->
 
