--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -48,11 +48,16 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 
 ### () - WED 11/02/2022
 <!-- test_threejs -->
+* () test-threejs: forpost - threejs-texture-loader - new section on list loader from new uvmap-cube threejs example
 * () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - new basic example
+* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more textures for list loader example
+<!-- EDIT -->
+* () edit: threejs-texture-loader - write about new list loader
 * () edit: threejs-buffer-geometry-attributes-uv - write about new basic example
-
 <!-- VIDEOGROUND-BETA-WORLD -->
+* () videoground-beta-world: new template using list loader r0
 * () videoground-beta-world: work on frink4
+* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
 
 ### () - TUE 11/01/2022
 * (done) test-threejs: forpost - threejs-texture-loader - update code examples
@@ -65,14 +70,5 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) edit: threejs-buffer-geometry-attributes-uv - proof read getting started section
 * (done) edit: threejs-buffer-geometry-attributes-uv - update code exmaples in post
 * (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - finish face r0 example
-
-<!-- test_threejs -->
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - start r0 texture loader example
-
-
-<!-- EDIT -->
-
-<!-- videoground-beta-world -->
-* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
-
-
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - start r0 texture loader example
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - start r0 list loader module and example
