--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -47,12 +47,12 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 ### () - THU 11/03/2022
 
 ### () - WED 11/02/2022
+* (done) test-threejs: forpost - threejs-texture-loader - new section on module based on one from new uvmap-cube threejs example
+* (done) edit: threejs-texture-loader - write about new module
 <!-- test_threejs -->
-* () test-threejs: forpost - threejs-texture-loader - new section on list loader from new uvmap-cube threejs example
 * () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - new basic example
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more textures for list loader example
 <!-- EDIT -->
-* () edit: threejs-texture-loader - write about new list loader
 * () edit: threejs-buffer-geometry-attributes-uv - write about new basic example
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () videoground-beta-world: new template using list loader r0
