--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -28,8 +28,8 @@ POST                                                        CLICKS  IMPRESSIONS
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 3 - SUN 11/06/2022 - SAT 11/12/2022
-
-I might want to write a new post on the base loader class this week.
+* I might want to write a new post on the base loader class this week.
+* I have a new examples-electionjs project prototype that is the file manager, that could be a post
 
 
 <!-------- ----------
@@ -49,6 +49,7 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 ### () - WED 11/02/2022
 * (done) test-threejs: forpost - threejs-texture-loader - new section on module based on one from new uvmap-cube threejs example
 * (done) edit: threejs-texture-loader - write about new module
+* (done) examples-electionjs: started a new file manager prototype
 <!-- test_threejs -->
 * () test-threejs: forpost - threejs-buffer-geometry-attributes-uv - new basic example
 * () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more textures for list loader example
