--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -46,8 +46,11 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 
 ### () - THU 11/03/2022
 <!-- test_threejs -->
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more textures for list loader example
 <!-- EDIT -->
+<!-- VIDEOGROUND-BETA-WORLD -->
+* () videoground-beta-world: use texture.js over list loader
+* () videoground-beta-world: update template to use texture.js over list-loader and loose list loader
+* () videoground-beta-world: work on frink4
 
 ### () - WED 11/02/2022
 * (done) test-threejs: forpost - threejs-texture-loader - new section on module based on one from new uvmap-cube threejs example
@@ -55,14 +58,8 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) examples-electionjs: started a new file manager prototype
 * (done) test-threejs: forpost - threejs-buffer-geometry-attributes-uv - new basic example
 * (done) edit: threejs-buffer-geometry-attributes-uv - write about new basic example
-
-* () test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - use texture.js over that of list loader
-
-<!-- VIDEOGROUND-BETA-WORLD -->
-* () videoground-beta-world: use texture.js over list loader
-* () videoground-beta-world: update template to use texture.js over list-loader and loose list loader
-* () videoground-beta-world: work on frink4
-* () videoground-beta-world: start new zucker video with threejs-examples-uvmap-cube-canvas-update r0
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - use texture.js over that of list loader
+* (done) test-threejs: forpost - threejs-examples-uvmap-cube-canvas-update - more textures for list loader example
 
 ### () - TUE 11/01/2022
 * (done) test-threejs: forpost - threejs-texture-loader - update code examples
