--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -22,7 +22,7 @@ POST                                                        CLICKS  IMPRESSIONS
 ```
 
 ## YOUTUBE
-* () update youtube github video links from threejs-examples-house forward
+* () update youttube gothub video links from threejs-ambient-light
 
 <!-------- ----------
 -- WEEK 2
@@ -47,6 +47,10 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 ### () - THU 11/03/2022
 <!-- test_threejs -->
 <!-- EDIT -->
+* (done) edit: threejs-export-webm-whammy - just proof read and expand opening and getting started section
+* (done) edit threejs-examples-house - link to for post folder
+* (done) update youtube github video links from threejs-examples-house
+
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () videoground-beta-world: use texture.js over list loader
 * () videoground-beta-world: update template to use texture.js over list-loader and loose list loader
