--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -43,16 +43,17 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 
 ### () - FRI 11/04/2022
 * () start post #1012 on threejs-examples-uvmap-cube-canvas-update
+<!-- test_threejs -->
+
+<!-- EDIT -->
+
 
 ### () - THU 11/03/2022
 * (done) edit: threejs-export-webm-whammy - just proof read and expand opening and getting started section
 * (done) edit threejs-examples-house - link to for post folder
 * (done) update youtube github video links from threejs-examples-house
-
-<!-- test_threejs -->
-
-<!-- EDIT -->
-
+* (done) new revision of threejs-examples-house
+* (done) default mime type actions for my file manager electionjs example
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () videoground-beta-world: use texture.js over list loader
 * () videoground-beta-world: update template to use texture.js over list-loader and loose list loader
