--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -54,9 +54,10 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) update youtube github video links from threejs-examples-house
 * (done) new revision of threejs-examples-house
 * (done) default mime type actions for my file manager electionjs example
+* (done) videoground-beta-world: use texture.js over list loader
+* (done) videoground-beta-world: update template to use texture.js over list-loader and loose list loader
 <!-- VIDEOGROUND-BETA-WORLD -->
-* () videoground-beta-world: use texture.js over list loader
-* () videoground-beta-world: update template to use texture.js over list-loader and loose list loader
+* () videoground-beta-world: use new up to date images for template4
 * () videoground-beta-world: work on frink4
 
 ### () - WED 11/02/2022
