--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -40,12 +40,19 @@ POST                                                        CLICKS  IMPRESSIONS
 The post to focus on a little each day is buffer-geometry-attributes-uv, new post is on a new example threejs-examples-uvmap-cube-canvas-update. So th focus this week is on the uv attribute, and things that end up branching off from that.
 
 ### () - SAT 11/05/2022
+* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
+* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
 
 ### () - FRI 11/04/2022
-* () start post #1012 on threejs-examples-uvmap-cube-canvas-update
-<!-- test_threejs -->
+* (done) start post #1012 on threejs-examples-uvmap-cube-canvas-update
+* (done) edit threejs-examples to have a link to the new post
+<!-- VIDEOGROUND-BLOG-POSTS -->
+* () start video for threejs-examples-uvmap-cube-canvas-update
+* () embed video into threejs-examples-uvmap-cube-canvas-update if done
 
-<!-- EDIT -->
+<!-- VIDEOGROUND-BETA-WORLD -->
+* () videoground-beta-world: use new up to date images for template4
+* () videoground-beta-world: work on frink4
 
 
 ### () - THU 11/03/2022
@@ -56,9 +63,6 @@ The post to focus on a little each day is buffer-geometry-attributes-uv, new pos
 * (done) default mime type actions for my file manager electionjs example
 * (done) videoground-beta-world: use texture.js over list loader
 * (done) videoground-beta-world: update template to use texture.js over list-loader and loose list loader
-<!-- VIDEOGROUND-BETA-WORLD -->
-* () videoground-beta-world: use new up to date images for template4
-* () videoground-beta-world: work on frink4
 
 ### () - WED 11/02/2022
 * (done) test-threejs: forpost - threejs-texture-loader - new section on module based on one from new uvmap-cube threejs example
