--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -22,14 +22,32 @@ POST                                                        CLICKS  IMPRESSIONS
 ```
 
 ## YOUTUBE
-* () update youttube gothub video links from threejs-ambient-light
+* () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 3 - SUN 11/06/2022 - SAT 11/12/2022
-* I might want to write a new post on the base loader class this week.
-* I have a new examples-electionjs project prototype that is the file manager, that could be a post
+ I might want to write a new post on the base loader class this week.
+ I have a new examples-electionjs project prototype that is the file manager, that could be a post
+
+### () - SAT 11/12/2022
+
+### () - FRI 11/11/2022
+
+### () - THU 11/10/2022
+
+### () - WED 11/09/2022
+
+### () - TUE 11/08/2022
+
+### () - MON 11/07/2022
+
+### () - SUN 11/06/2022
+* (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
+* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
+
+<!-- VIDEOGROUND-BLOG-POSTS -->
 
 
 <!-------- ----------
@@ -40,15 +58,12 @@ POST                                                        CLICKS  IMPRESSIONS
 The post to focus on a little each day is buffer-geometry-attributes-uv, new post is on a new example threejs-examples-uvmap-cube-canvas-update. So th focus this week is on the uv attribute, and things that end up branching off from that.
 
 ### () - SAT 11/05/2022
-* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
-* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
+* (done) start video for threejs-examples-uvmap-cube-canvas-update
+* (done) embed video into threejs-examples-uvmap-cube-canvas-update if done
 
 ### () - FRI 11/04/2022
 * (done) start post #1012 on threejs-examples-uvmap-cube-canvas-update
 * (done) edit threejs-examples to have a link to the new post
-<!-- VIDEOGROUND-BLOG-POSTS -->
-* () start video for threejs-examples-uvmap-cube-canvas-update
-* () embed video into threejs-examples-uvmap-cube-canvas-update if done
 
 <!-- VIDEOGROUND-BETA-WORLD -->
 * () videoground-beta-world: use new up to date images for template4
