--- a/todo/today/todo_2022_11.md
+++ b/todo/today/todo_2022_11.md
@@ -45,9 +45,12 @@ POST                                                        CLICKS  IMPRESSIONS
 
 ### () - SUN 11/06/2022
 * (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the module itself
-* () edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
+* (done) edit: threejs-examples-uvmap-cube-canvas-update - expand more on the r0 demos
+<!-- test_threejs -->
+* () work on get sample alpha prototype
 
-<!-- VIDEOGROUND-BLOG-POSTS -->
+<!-- VIDEOGROUND-BETA-WORLD -->
+* () start an animusic collection
 
 
 <!-------- ----------
